feat: add ESLint configuration, update TypeScript settings, and implement new SVG components

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,22 +3,22 @@
 @tailwind utilities;
 
 @layer components {
-  .btn {
-    @apply w-full rounded px-4 py-1 text-center font-medium transition-all hover:ring-1 active:scale-x-95 active:ring-2;
-  }
-  .btn-white {
-    @apply w-full rounded bg-light px-6 py-2 text-center font-medium text-textcolor shadow-dark ring-light/50 transition-all hover:opacity-90 hover:shadow-sm hover:ring-1 active:scale-x-95 active:ring-4;
-  }
-  .btn-primary {
-    @apply w-full rounded bg-primary px-6 py-2 text-center font-medium text-light shadow-dark ring-primary/50 transition-all hover:opacity-90 hover:shadow-sm hover:ring-1 active:scale-x-95 active:ring-4;
-  }
-  .ellipsis {
-    @apply line-clamp-1 max-h-20 overflow-hidden text-ellipsis whitespace-break-spaces leading-relaxed [-webkit-box-orient:vertical] [display:-webkit-box];
-  }
-  .ellipsis-2 {
-    @apply line-clamp-2 max-h-20 overflow-hidden text-ellipsis whitespace-break-spaces leading-relaxed [-webkit-box-orient:vertical] [display:-webkit-box];
-  }
-  .ellipsis-3 {
-    @apply line-clamp-3 max-h-20 overflow-hidden text-ellipsis whitespace-break-spaces leading-relaxed [-webkit-box-orient:vertical] [display:-webkit-box];
-  }
+    .btn {
+        @apply flex w-full justify-center rounded-md px-3 py-1.5 text-sm/6 font-semibold shadow-sm focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary/50 transition-all hover:ring-1 active:scale-x-95 active:ring-2;
+    }
+    .btn-white {
+        @apply flex w-full justify-center rounded-md bg-light px-3 py-1.5 text-sm/6 font-semibold text-textcolor shadow-sm hover:bg-light/80 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-light transition-all hover:ring-1 active:scale-x-95 active:ring-2;
+    }
+    .btn-primary {
+        @apply flex w-full justify-center rounded-md bg-primary px-3 py-1.5 text-sm/6 font-semibold text-light shadow-sm hover:bg-primary/90 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary transition-all hover:ring-1 active:scale-x-95 active:ring-2;
+    }
+    .ellipsis {
+        @apply line-clamp-1 max-h-20 overflow-hidden text-ellipsis whitespace-break-spaces leading-relaxed [-webkit-box-orient:vertical] [display:-webkit-box];
+    }
+    .ellipsis-2 {
+        @apply line-clamp-2 max-h-20 overflow-hidden text-ellipsis whitespace-break-spaces leading-relaxed [-webkit-box-orient:vertical] [display:-webkit-box];
+    }
+    .ellipsis-3 {
+        @apply line-clamp-3 max-h-20 overflow-hidden text-ellipsis whitespace-break-spaces leading-relaxed [-webkit-box-orient:vertical] [display:-webkit-box];
+    }
 }
