--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://db.onlinewebfonts.com/c/1cf1f2490466e3535a8d780967d32659?family=MgDigital");
 
 /* :root { */
 /* --dark: 0, 0, 0; Black */
@@ -44,8 +45,9 @@
 html.light {
   --dark: 0, 0, 0; /* black */
   --light: 255, 255, 255; /* white */
-  --ghost-white: 240, 240, 240; /* Neutral gray */
-  --primary: 238, 60, 39; /* orange for primary */
+  --ghost-white: 250, 250, 250; /* Neutral gray */
+  /* --primary: 238, 60, 39; orange for primary */
+  --primary: 0, 40, 172; /* blue for primary */
   --secondary: 230, 244, 241; /* Light teal for secondary */
   --textcolor: 62, 65, 76; /* Light gray for text */
   --error: 217, 45, 32; /* Bright red */
@@ -57,10 +59,9 @@ html.light {
 html.dark {
   --dark: 0, 0, 0; /* black */
   --light: 255, 255, 255; /* white */
-  --ghost-white: 240, 240, 240; /* Neutral gray */
-  --primary: 238, 60, 39; /* orange for primary */
-  /* --primary: 255, 94, 20; orange for primary */
-  /* --primary: 0, 40, 172; blue for primary */
+  --ghost-white: 250, 250, 250; /* Neutral gray */
+  /* --primary: 238, 60, 39; orange for primary */
+  --primary: 0, 40, 172; /* blue for primary */
   --secondary: 230, 244, 241; /* Light teal for secondary */
   --textcolor: 62, 65, 76; /* Light gray for text */
   --error: 217, 45, 32; /* Bright red */
@@ -108,6 +109,10 @@ h6,
 
 .font-open-sans {
   font-family: "Open Sans", sans-serif;
+}
+
+.font-digital {
+  font-family: "MgDigital";
 }
 
 .wrapper,
