--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,6 +107,11 @@ h6,
   font-family: "Roboto", sans-serif;
 }
 
+button:disabled {
+  cursor: not-allowed !important;
+  opacity: 0.6 !important;
+}
+
 .font-open-sans {
   font-family: "Open Sans", sans-serif;
 }
